--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,8 +15,14 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/russianDancerSpec.js"></script>
+  <script src="spec/shuffleDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/shuffleDancer.js"></script>
+  <script src="src/russianDancer.js"></script>
+
+
 </head>
 <body>
 <div id="mocha"></div>
