--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,6 +15,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRussianDancer">add a russian dancer</a>    
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeShuffleDancer">add a shuffle dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="lineUpButton">Line up</a>
     </div>
     <script src="src/init.js"></script>
   </body>
